<resources>
    <string name="app_name">大了个学</string>
    <string name="app_name_zh">大了个学</string>
    <string name="index_tab_campus">校园</string>
    <string name="index_tab_message">消息</string>
    <string name="index_tab_money">爱赚</string>
    <string name="index_tab_mine">我的</string>
    <!-- 取消报名 -->
    <string name="mine_partjob_cancel_tip">建议先与商家取得联系</string>
    <string name="mine_partjob_cancel_unable">为保证兼职的顺利进行，您无法取消已截至报名或已开始工作的兼职。若您有特殊情况不能前往兼职，请与商家联系。</string>
    <string name="mine_partjob_cancel_no_chance">本周还有0次取消报名的操作权限，若您确有特殊情况不能前往兼职，请先联系商家。</string>
    <string name="mine_partjob_cancel_have_chance">本周还有%s次取消报名的操作权限，我们将以短信形式提醒商家您已取消本次报名。请您谨慎考虑！</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--报名详情 => 工作信息 => 工作报酬 =>结算方式  -->
    <string name="mine_partjob_list_salary_unit_per_hour">/小时</string>
    <string name="mine_partjob_list_salary_unit_per_day">/天</string>
    <string name="mine_partjob_list_salary_unit_per_month">/月</string>
    <!--报名详情 => 工作信息 => 工作报酬 =>结算方式  -->
    <string name="mine_partjob_detail_settle_length_day">日结</string>
    <string name="mine_partjob_detail_settle_length_week">周结</string>
    <string name="mine_partjob_detail_settle_length_half_month">半月结</string>
    <string name="mine_partjob_detail_settle_length_month">月结</string>
    <string name="mine_partjob_detail_settle_length_finish">完工结</string>
    <string name="partjob_detail_popup_tip">您即将报名＂XXX"兼职。7天内，您仅有一次取消报名的权限，请确保你能按时前往并及时联系商家。</string>
    <string name="empty_merchant_list_tip">报名兼职之后，才会有商家哦！</string>
    <string name="empty_notification_list_tip">还没有收到任何消息呢！</string>

    <!-- 聊天模块字符串资源 -->
    <string name="bnt_send_msg_text">发送</string>
    <string name="btn_text_press_to_talk">按住 说话</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_picture">图片</string>
    <string name="attach_location">位置</string>
    <string name="sd_card_does_not_exist">未挂载SD卡</string>
    <string name="send_fail">发送失败</string>
    <string name="connect_failuer_toast">网络接连失败</string>
    <string name="Download_the_pictures_new">图片加载中…</string>

    <!-- 提示信息 -->
    <string name="message_title">提示</string>
    <string name="OK_text">确定</string>
    <string name="cancel_text">取消</string>
    <string name="updapp">检测到新版本，是否要更新？</string>
    <string name="updapp_force">检测到新版本，请更新！</string>
    <!--联系客服-->
    <string name="mine_contact_service_qq">我是大了个学的客服姐姐。人家才不是专门为你服务的呢。但是我还是很开心为你服务！</string>
    <string name="mine_contact_service_tel">帅哥，美女亲自为你答疑解惑。兼职遇到问题，必将不遗余力为你解决哦！</string>
    <string name="mine_contact_service_wechat">关注微信公众账号，可参加定期活动，赢取奖品。同时可查公交路线，天气等。</string>
    <string name="mine_contact_service_tel_num">057122956566</string>
    <!--完善资料-->
    <string name="profile_improve_warning">&#160;请填写真实资料，否则会影响后期认证导致部分功能无法正常使用</string>
    <string name="tip_no_data">什么都木有，你走吧~走吧~吧~</string>

    <!--重置支付密码-->
    <string name="mine_reset_pay_psw_card_number_tip">请输入与帐号验证一致的证件号码</string>
    <!-- 联系客服-QQ -->
    <string name="support_staff_qq_url"><![CDATA[mqqwpa://im/chat?chat_type=wpa&uin=2841329585]]></string>
    <string name="gold_withdraw_validate_identity_not_pass">您的身份还没有验证，还不能提现哦！赶快去验证吧~</string>
    <string name="gold_modify_pay_psw_validate_identity_not_pass">您的身份还没有验证，还不能找回密码哦！赶快去验证吧~</string>
    <string name="gold_withdraw_validate_identity_wait">您的身份验证中，我们将在1&#8211;3个工作日内处理，请耐心等待</string>
    <!--提现-->
    <string name="gold_withdraw_tip">提现每天最多提三次，1&#8211;2个工作日到账，30.0元起提！</string>
    <string name="identity_authentication_tip">账号验证将影响您的账号安全及现金提取，请您尽快验证您的身份证信息。提交审核后将在1&#8211;3个工作日时间完成，请您耐心等待。</string>
    <string name="about_us_intro">
           \t\t“8090”，“低调”，“个性张扬”…任何标签都适合我们。 杭州最帅的创业团队， 成员帅，作风帅，产品更帅。成员有分别来自阿里，网易，360等各大互联网巨头里的精英！也有刚出校园，充满活力与激情的90后！\n
            \t\t我们曾创造了爱赚，专属于大学生自己的兼职平台。现在我们打造大了个学，就是想让在这个被大学上的悲剧时代，让大学生真正的上大学。跑腿，代购，在线求助……只要是你需要的，在这里都能实现！\n
            \t\t最酷炫的创业团队，带你们大了个学！
    </string>
    <string name="about_us_copyright">Copyright © 2015 izhuan365.com All Rights Reserved</string>
    <string name="about_us_version">Android V2.0</string>
</resources>
